# simppl

./: CMakeLists.txt
cmake/: SimpplConfig.cmake.in
include/simppl/: objectpath.h  serialization.h  variant.h
src/: dispatcher.cpp  serialization.cpp  string.cpp
